# DVXR

./: .fastapicloudignore  .gitignore  BCI_PIPELINE.md  BENCHMARK_FINDINGS.md  CHANGES.md  Dockerfile  GOAL.md  GOAL1_COMPLIANCE.md  Makefile  PAPER_DRAFT.md  README.md  artifact-single-file.html  build_dnh_labram_scoreboard.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: benchmark-runner.md  dataset-ingestion.md  (+2 more)
configs/: default.yaml
docs/: ARCHITECTURE.md  BUILD_REPORT.md  CAUSAL.md  DECISIONS_QA.md  DEPLOY.md  EHR_NOTES.md  EXPLAINABILITY.md  FINETUNED_TASKS.md  FIX_PLAN.md  FRAMEWORK_OVERVIEW.md  GLUCOSE_FORECASTING.md  GLUCOSE_FROM_DEVICES.md  GOAL_ACHIEVEMENT.md  HEADS_SOTA.md  IMPROVEMENT_EXPERIMENT.md  INTEROPERABILITY.md  LITERATURE_REVIEW.md  MASTER_BRIEF.md  MODEL_ARCHITECTURE.md  MODEL_CARD.md  MODEL_FLOW.md  MODEL_JUSTIFICATION.md  PIPELINE_DEEP_DIVE.md  REAL_DEVICE_DATA.md  REFRACTOR_PLAN.md  REPRODUCE.md  RT_DEMO_STREAM_CONTRACT.md  SLICE_B_LABRAM.md  UNITY_RT_DEMO.md  USER_FACING_DEPLOY.md  claude-artifact.html  model_flow_diagram.html
dvxr-vr-realtime/: GOAL.md  README.md  package.json
neuroglycemic-sentinel/: README.md  main.py
outputs/: ablation_summary.md  ablation_table.csv  benchmark_scoreboard.csv  benchmark_scoreboard.md  cgm_product_deployment.md  clinical_notes_scoreboard.md  clinical_task_metrics.csv  clinical_tasks.csv  codebook_indices.csv  codebook_usage.csv  data_schema_report.md  dataset_registry.csv  deap_arousal_embeddings.csv  deap_arousal_predictions.csv  deap_arousal_windows.csv  device_emotiv.csv  device_galea.csv  device_vr.csv  encoder_recommendations.csv  explanation_example.md  fusion_attention.csv  glucose_ablation_cgmacros.md  glucose_forecast_cgmacros.md  glucose_forecast_table.csv  glucose_predictions.csv  goal1_model_card.md  goal1_omics_features.csv  incident_target.md  insight_example.md  latency_report.md  latent_joint_h.npy  latent_quantized.npy  llm_finetune_probe.md  llm_interpretability_cgmacros_diabetes.json  llm_interpretability_cgmacros_diabetes.md  llm_interpretability_cgmacros_glucose.json  llm_interpretability_cgmacros_glucose.md  llm_interpretability_deap_arousal.json  llm_interpretability_deap_arousal.md  llm_interpretability_wesad_stress.json  (+28 more)
paper/: main.tex  references.bib
presentation/: GOALS_QA_NOTES.md  OUTLINE.md  build_presentation_assets.py  deck.html
scripts/: build_cgm_artifact.py  build_dashboard.py  build_dnh_labram_scoreboard.py  build_evidence_page.py  build_paper_tables.py  build_screen_demo.py  comparative_analysis.py  compare_sota_models.py  convert_deap_subject.py  convert_emotiv_subject.py  convert_galea_subject.py  convert_omics_subject.py  convert_wesad_subject.py  dashboard_app.py  deap_fullrate_probe.py  deep_tabular_glucose.py  depression_identity_audit.py  ensemble_compare.py  fetch_data.py  finetune_tasks_scoreboard.py  ingest_real_devices.py  ingest_vr_session.py  integrate_emotiv.py  integrate_galea.py  make_presentation_assets.py  measure_latency.py  render_framework_overview.py  render_model_architecture.py  run_ablation.py  run_bci_pipeline.py  run_benchmark.py  run_clinical_notes_bench.py  run_deap_demo.py  run_demo.py  run_dnh_ablation.py  run_dnh_diagnostic.py  run_fusion_ablation.py  run_goal1_full.py  run_llm_indist_ablation.py  run_mmf_full.py  (+9 more)
tests/: test_ablation.py  test_ablation_methodology.py  test_adapters.py  test_agentic_parity.py  test_alert_endpoints.py  test_api.py  test_api_security.py  test_audit_tenant_scope.py  test_batch_triage.py  test_bci_smoke.py  test_bench.py  test_bench_floors.py  test_bench_new_tasks.py  test_biomarkers.py  test_calibration_temp.py  test_cgmacros_loader.py  test_cli.py  test_clinical_metrics.py  test_clinical_notes.py  test_clinical_tasks.py  test_codebook.py  test_consent_richness.py  test_contracts.py  test_cutoff_tz_mismatch.py  test_dashboard_build.py  test_data_cleanliness.py  test_data_isolation.py  test_deap_loader.py  test_deploy_wrapper.py  test_device_converters.py  test_docs_consistency.py  test_evidence.py  test_excursion_target.py  test_explain.py  test_external_evidence.py  test_functional_product_path.py  test_fusion.py  test_fusion_result_is_request_local.py  test_gated_fusion.py  test_generate_lifecycle.py  (+68 more)
(+317 files in other folders)
