[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvxr"
version = "0.1.0"
description = "DVXR Screen — research-grade multimodal clinical-risk screening (EEG-first) with validated, calibrated, evidence-backed models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Abhignya Jagathpally" }]
keywords = ["EEG", "BCI", "foundation-model", "clinical-screening", "multimodal", "calibration"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
]

# Core runtime for the serving layer (fit -> save -> load -> predict) AND the deployable product
# (dvxr.serve.asgi:app). fastapi[standard] is core because the product ships on FastAPI Cloud, whose
# runtime starts the app via the `fastapi run` CLI (needs fastapi-cli, in the standard extra); the app
# imports cleanly on this set alone (verified with all heavy encoders blocked). Heavier optional
# encoders (torch/transformers/LaBraM weights, xgboost) stay extras so a plain install stays light;
# the band-power screeners run on the core alone.
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "joblib",
    "fastapi[standard]",
]

[project.optional-dependencies]
eeg = ["torch", "transformers", "safetensors", "huggingface_hub", "mne", "einops"]
floor = ["xgboost"]
io = ["wfdb", "openpyxl", "pyarrow", "kagglehub"]
app = ["streamlit"]                       # the live interactive demo (dvxr demo --serve)
api = ["starlette", "uvicorn"]            # the thin HTTP API (dvxr serve-api)
deploy = ["fastapi", "uvicorn"]           # FastAPI wrapper for FastAPI Cloud (dvxr.serve.asgi:app)
agents = ["langgraph>=0.2", "langchain-core>=1.0,<2"]  # LangGraph orchestration spine (/v1/research/predict/agentic)
dev = ["pytest"]                          # the pytest-style user-facing web tests
all = ["dvxr[eeg,floor,io,app,api]"]

[project.scripts]
dvxr = "dvxr.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

# Ship the user-facing web surface (index.html + assets) INSIDE the installed dvxr package. Without
# this, `pip install .` (what FastAPI Cloud runs) drops the non-.py files, and dvxr.serve.asgi's
# `Path(__file__).parents[1]/"web"/"index.html"` lookup would fail at boot with "assets are missing".
[tool.setuptools.package-data]
"dvxr.web" = ["*.html", "assets/*"]
